--- a/node/package.json
+++ b/node/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "hap-nodejs": "^0.11.1"
+    "hap-nodejs": "^0.11.1",
+    "zod": "^3.21.4"
   }
 }
